<resources>
    <string name="app_name">MobileAppGroup</string>
    <string name="new_post">New Post</string>
    <string name="type_caption">Type Caption</string>
    <string name="caption">Enter Text</string>
    <string name="confirm_post">Confirm Post</string>
    <string name="post">Post</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="back">Back</string>
    <string name="edit_post">Edit Post</string>
    <string name="update">Update</string>
</resources>