<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/post_background_gradiant"
    tools:context=".NewPost2nd">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_post"
        android:textAlignment="center"
        android:textStyle="italic"
        android:fontFamily="sans-serif-black"
        android:textSize="36sp"
        android:textColor="@color/dark_teal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/et_newPost2_location"
            android:layout_width="300dp"
             android:layout_height="wrap_content"
            android:hint="Enter Location"
            android:background="@drawable/et_rounded_edge_background"
            android:backgroundTint="@color/white"
            android:padding="5dp"
            android:textSize="18sp"
            android:textColor="@color/dark_teal"/>
        <ImageView
            android:id="@+id/btn_newPost2_locationPointer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_location_on_24"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/caption"
    android:textSize="24sp"
    android:textColor="@color/dark_teal"
    android:layout_marginHorizontal="20dp"/>
        <EditText
            android:id="@+id/et_newPost2_caption"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/et_rounded_edge_background"
            android:backgroundTint="@color/white"
            android:hint="@string/type_caption"
            android:gravity="top"
            android:padding="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_newPost2_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#C80D50"
            android:text="Back"
            android:layout_marginRight="100dp"/>

        <Button
            android:id="@+id/btn_newPost2_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#C80D50"
            android:text="Next"/>

    </LinearLayout>
</LinearLayout>