<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/post_background_gradiant"
    android:orientation="vertical"
    tools:context=".ConfirmPost">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/confirm_post"
        android:textAlignment="center"
        android:textColor="@color/dark_teal"
        android:textSize="36sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/et_rounded_edge_background"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="20dp">

            <ImageView
                android:id="@+id/img_confirmPost_ProfilePic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_confirmPost_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="USERNAME"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_confirmPost_Location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="LOCATION"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_confirmPost_photo"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:background="@color/black" />
            <TextView
                android:id="@+id/tv_confirmPost_Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CAPTION"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_confirmPost_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:backgroundTint="#C80D50"
            android:text="@string/back" />

        <Button
            android:id="@+id/btn_confirmPost_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#C80D50"
            android:text="@string/post" />

    </LinearLayout>
</LinearLayout>